package com.leetcode.authservice.domain.enums;

public enum Role {
    ADMIN,
    USER
}
