package com.leetcode.judgeservice.domain.enums;

public enum ProgrammingLanguage {
    JAVA,
    PYTHON,
    JAVASCRIPT,
    CPP,
    GO
}
