package com.leetcode.judgeservice.domain.enums;

public enum SubmissionStatus {
    PENDING,
    PROCESSING,
    ACCEPTED,
    WRONG_ANSWER,
    TIME_LIMIT_EXCEEDED,
    MEMORY_LIMIT_EXCEEDED,
    COMPILATION_ERROR,
    RUNTIME_ERROR,
    INTERNAL_ERROR
}
