package com.leetcode.problemservice.domain.enums;

public enum Difficulty {
    EASY,
    MEDIUM,
    HARD
}
